2015-09-07  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-copy-records-as-kill): Fix docstring.
	Delete unused local variable marker.

2015-09-07  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-copy-fields-as-kill): New command.
	* lisp/bbdb.el (bbdb-separator-alist, bbdb-mode-map): Update
	accordingly.

2015-05-23  Eric Abrahamsen <eric@ericabrahamsen.net>
	* lisp/bbdb.el (bbdb-record-set-field, bbdb-parse-records): Use
	equal for comparison when populating lists of labels.

2015-05-22  Roland Winkler  <winkler@gnu.org>
	Add basic support for mu4e mailer.
	* NEWS, README: Update accordingly.
	* m4/emacs_mu4e.m4: New file.
	* configure.ac: Use it.
	* lisp/bbdb-mu4e.el: New file.
	* lisp/Makefile.am, lisp/makefile-temp: Compile it.
	* lisp/bbdb.el (bbdb-init-forms): Add entry for mu4e.
	(bbdb-initialize): Update docstring.
	* lisp/bbdb-mua.el: Define mu4e~view-buffer-name.
	(bbdb-mua-mode-alist): Add element for mu4e.
	(bbdb-mua): Update docstring.
	(bbdb-mua-update-records, bbdb-mua-wrapper): Handle mu4e.

2015-05-22  Roland Winkler  <winkler@gnu.org>
	Remove variables bbdb/MUA-update-records-p.
	* lisp/bbdb-mua.el (bbdb-update-records): Rely only on arg
	update-p.
	* lisp/bbdb-gnus.el (bbdb/gnus-update-records-p): Remove.
	* lisp/bbdb-message.el (bbdb/mail-update-records-p)
	(bbdb/message-update-records-p): Remove.
	* lisp/bbdb-mh.el (bbdb/mh-update-records-p): Remove.
	* lisp/bbdb-rmail.el (bbdb/rmail-update-records-p): Remove.
	* lisp/bbdb-vm.el (bbdb/vm-update-records-p): Remove.
	* README, NEWS: Update accordingly.

2015-05-22  Roland Winkler  <winkler@gnu.org>
	Handle prefix command bbdb-do-all-records more robustly.
	* lisp/bbdb.el (bbdb-do-all-records): New variable.
	(bbdb-modeline-info): Add two new slots.
	(bbdb-mode): Use them.
	* lisp/bbdb-com.el (bbdb-prefix-message): New function.
	(bbdb-do-all-records, bbdb-do-records): Use variable
	bbdb-do-all-records.
	(bbdb-append-display-p): Update displayed message.